--- a/.github/workflows/pypipublish.yml
+++ b/.github/workflows/pypipublish.yml
@@ -13,5 +13,7 @@ jobs:
         with:
           dockerfile: public.Dockerfile
           repository: razorpay/amundsen-frontend
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
           tags: oidc-${{ github.sha }}
           target: oidc-release
