--- a/.github/workflows/pypipublish.yml
+++ b/.github/workflows/pypipublish.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           dockerfile: public.Dockerfile
           repository: razorpay/amundsen-frontend
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_PUBLIC_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PUBLIC_PASSWORD }}
           tags: oidc-${{ github.sha }}
           target: oidc-release
